# tdg-devops-test

./: CMakeLists.txt  CMakePresets.json  conanfile.py
.teamcity/: CiLinuxGccBuildOnly.kt  LinuxGCC.kt  TdgVcsRoot.kt  pom.xml  settings.kts
.teamcity/common/: TdgVcsRoot.kt
.teamcity/patches/projects/: _Self.kts
.teamcity/patches/vcsRoots/: TdgVcsRoot.kts
.teamcity/projects/: BuildExecutionNodes.kt  CiWorkflows.kt
.teamcity/workflows/: ConanArtifactoryMatrix.kt  CrossPlatformFixed.kt  LinuxClangFixed.kt  LinuxClangFixedRelease.kt  LinuxGCC.kt  LinuxGCCFixed.kt  NightlyFixedMatrix.kt  WindowsMSVCFixed.kt
.teamcity/workflows/linux/: ConanLinuxClangArtifactory.kt  ConanLinuxGCCArtifactory.kt  LinuxClangFixedDebug.kt  LinuxGCCDebug.kt  LinuxGCCFixedDebug.kt  LinuxGCCFixedQuality.kt  LinuxGCCFixedRelease.kt  LinuxGCCRelease.kt
.teamcity/workflows/windows/: ConanWindowsMSVCArtifactory.kt  WindowsMSVCFixedDebug.kt  WindowsMSVCFixedRelease.kt
ci/conan/profiles/: linux-clang  linux-clang-debug  linux-gcc  linux-gcc-debug  windows-msvc-debug
ci/docker/teamcity-agent-clang/: Dockerfile
ci/docker/teamcity-agent-gcc/: Dockerfile
ci/scripts/: gcovr.cfg  quality_linux_gcc_fixed.sh  render_quality_reports.py
cmake/: calculatorConfig.cmake.in
docker/teamcity-agent-clang/: Dockerfile
docker/teamcity-agent-gcc/: Dockerfile
scripts/: ci_linux.sh
src/lib/: CMakeLists.txt
tests/: CMakeLists.txt
